src/main/java/com/example/demo/error/UserEmailDuplicateException.java
package com.example.demo.error;

public class UserEmailDuplicateException extends RuntimeException{
    public UserEmailDuplicateException(String msg){
        super(msg);
    }
}
